...
        tabBarButton: (props) => <TabBarButton {...props} />,
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          tabBarButtonTestID: "tab.today",
          title: t("tab_today"),
          tabBarIcon: ({ color, size, focused }) => (
            <TabBarIcon focused={focused}>
              <Ionicons name="today-outline" color={color} size={size} />
            </TabBarIcon>
          ),
...
          ),
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          tabBarButtonTestID: "tab.settings",
          title: t("settings_tab_title"),
          tabBarIcon: ({ color, size, focused }) => (
            <TabBarIcon focused={focused}>
              <View>
                <Ionicons name="settings-outline" color={color} size={size} />
                {showSignInAlert && <AttentionDot />}
...
